--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,7 +2,6 @@ $shadow: 1px 1px 3px 1px #c5c5c5;
 $blue-main: #1b8bf9;
 
 body > #root{
-
     .input {
         display: none;
     }
@@ -12,39 +11,55 @@ body > #root{
         display: block;
         font-weight: 500;
     }
-    header {
+
+    .navbar, .navbar-default {
+        background-image: none !important;
         background-color: $blue-main;
-        height: 50px;
-
-        div {
-            display: inline-block;
-        }
-
-        .company-name {
+        border: none;
+        .navbar-toggle {
             color: white;
-            font-size: 32px;
-            margin-left: 10%;
-        }
-
-        .nav-user {
-            color: white;
-            float: right;
-            font-size: 18px;
-            padding: 5px;
-
-            img {
-                border-radius: 50%;
-                margin-right: 5px;
-                width: 40px;
+            .icon-bar {
+                background-color: white;
             }
+        }
 
-            i.fa {
-                margin-left: 10px;
-                padding: 10px;
-                &:hover {
-                    color: #FB8469;
+        .navbar-toggle:hover {
+            background-color: $blue-main;
+        }
+
+        .navbar-toggle:focus {
+            background-color: $blue-main;
+        }
+
+        .navbar-collapse {
+            nav {
+                li {
+                    a {
+                        color: white;
+                    }
                 }
             }
+        }
+
+        .navbar-brand {
+            color: white;
+            font-weight: 400;
+            font-size: 28px;
+        }
+    }
+
+    nav {
+        background-color: $blue-main;
+        margin: 0;
+        .logo {
+            img {
+                border-radius: 50%;
+                margin-top: 0;
+                width: 30px;
+            }
+        }
+        .navbar-brand {
+            font-size: 24px;
         }
     }
 
@@ -433,7 +448,7 @@ body > #root{
             left: 50%;
             padding: 15px;
             position: absolute;
-            top: 30%;
+            top: 20%;
             transform: translate(-50%, -30%);
         }
     }
@@ -441,7 +456,6 @@ body > #root{
 
 @media only screen and (min-width: 320px) and (max-width: 767px){
     body > #root{
-
         header {
             height: 40px;
             .company-name {
