--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -449,6 +449,26 @@ body > #root{
         .registration-center {
             @extend %form;
             transform: translate(-50%, -15%);
+
+            .react-datepicker {
+                font-size: 1.3rem !important;
+              }
+              
+              .react-datepicker__current-month {
+                font-size: 1.5rem !important;
+              }
+              
+              .react-datepicker__header {
+                padding-top: 6px !important;
+              }
+              
+              .react-datepicker__navigation {
+                top: 13px !important;
+              }
+              
+              .react-datepicker__day-name, .react-datepicker__day {
+                margin: 0.5rem !important;
+              }
         }
     }
 }
