--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -582,5 +582,8 @@ body > #root{
                 }
             }            
         }
+        .login-form-container {
+            height: 1500px;
+        }
     }
 }
