--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -70,6 +70,33 @@ body > #root{
         padding: 22px 15px;
     }
 
+    .charts-container {
+        background-color: #e5e5e5;
+
+        .cover {
+            .menu { 
+                background-color: white;
+                box-shadow: $shadow;
+                color: black;
+                height: 70px;
+                right: 0;
+                margin-bottom: 20px;
+                width: 100%;
+
+                .menu-item {
+                    text-align: center;
+                    font-size: 18px;
+                    padding-top: 20px;
+                    height: 70px;
+                }
+
+                .link {
+                    color: #626461;
+                }
+            }
+        }
+    }
+
     .main-container {
         background-color: #e5e5e5;
         padding-bottom: 100px;
