--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -449,8 +449,13 @@ body > #root{
                                     margin-bottom: 10px;
                                     padding: 10px;
                                     height: 150px;
-                                    .friend-profile-pic {
-                                        height: 100%;
+
+                                    .friend-img {
+                                        display: inline-block;
+                                        height: 130px;
+                                        width: 130px;
+                                        background-size: cover;
+                                        background-position: center;
                                         border-radius: 50%;
                                     }
 
@@ -460,7 +465,7 @@ body > #root{
                                         margin: 15px 0; 
                                         padding-left: 10px;
                                         vertical-align: top; 
-                                        width: 50%;
+                                        width: 60%;
                                         .friend-name {
                                             font-size: 16px;
                                         }
@@ -595,6 +600,24 @@ body > #root{
                                     .content {
                                         font-size: 14px;
                                         padding: 10px;
+                                    }
+                                }
+                            }
+
+                            .friends {
+                                .row {
+                                    .friend-info {
+                                        height: 125px;
+                                        .friend-img {
+                                            height: 100px;
+                                            width: 100px;
+                                        }
+                                        .friend-content {
+                                            margin: 5px 0;
+                                            .friend-name {
+                                                margin-bottom: 5px;
+                                            }
+                                        }
                                     }
                                 }
                             }
