--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -7,7 +7,6 @@ body > #root{
         background-color: $blue-main;
         border: none;
         border-radius: 0;
-        height: 60px;
         .navbar-toggle {
             color: white;
             .icon-bar {
@@ -26,7 +25,7 @@ body > #root{
         .navbar-nav {
             li {
                 a {
-                    padding: 12px 0;
+                    padding: 10px 0;
                 }
             }
         } 
@@ -46,31 +45,29 @@ body > #root{
             font-weight: 400;
             font-size: 28px;
             padding: 20px;
+            height: 60px;
         }
     }
 
     nav {
         background-color: $blue-main;
         margin: 0;
-        // .logo {
-        //     border-radius: 50%;
-        //     width: 40px;
-        //     height: 40px;
-        //     background-size: cover;
-        //     background-position: center;
-        // }
         .logo {
-            display: inline-block;
-            margin-left: 10px;
-            img {
-                border-radius: 50%;
-                width: 40px;
-                height: 40px;
-            }
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            background-size: cover;
+            background-position: center;
         }
-        .navbar-brand {
-            font-size: 24px;
-        }
+        // .logo {
+        //     display: inline-block;
+        //     margin-left: 10px;
+        //     img {
+        //         border-radius: 50%;
+        //         width: 40px;
+        //         height: 40px;
+        //     }
+        // }
     }
 
     %no-data-block {
@@ -352,11 +349,15 @@ body > #root{
                                         margin-bottom: 0px;
                                     }
 
-                                    img {
+                                    .logo {
                                         display: block;
                                         left: -58px;
                                         position: absolute;
                                         width: 40px;
+                                        height: 40px;
+                                        background-position: center;
+                                        background-size: cover;
+                                        border-radius: 50%;
                                     }
                                 }
 
@@ -504,17 +505,17 @@ body > #root{
     }
 
     .login-form-container {
-        background-color: #3198fe;
         height: 1200px;
         position: relative;
         %form {
             background-color: white;
-            border-radius: 15px;
+            border-radius: 10px;
             left: 50%;
             padding: 15px;
             position: absolute;
             top: 20%;
             transform: translate(-50%, -30%);
+            box-shadow: 2px 2px 15px #0979c5;
         }
 
         .form-center {
@@ -557,6 +558,22 @@ body > #root{
 
 @media only screen and (min-width: 320px) and (max-width: 767px){
     body > #root{
+
+        .navbar, .navbar-default {
+            .navbar-nav {
+                li {
+                    a {
+                        padding: 0;
+                    }
+                }
+            }
+
+            .navbar-brand {
+                padding: 15px;
+                height: 50px;
+            }
+        } 
+
         header {
             height: 40px;
             .company-name {
@@ -645,8 +662,8 @@ body > #root{
                                 }
                                 .post {
                                     .post-header {
-                                        img {
-                                            left: -44px;
+                                            .logo {
+                                                left: -44px;
                                         }
                                     }
 
